# greenlane

./: .envrc  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierignore  .rumdl.toml  AGENTS.md  Cargo.toml  Makefile  README.md  greenlane-7177.glr  install.sh  main.py  pyproject.toml  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
bench/: app.py
docs/: architecture.md  testing.md
docs/adr/: 0001-binary-trace-format.md
docs/design/: glr-format.md  implementation-plan.md
plugins/: README.md
src/: bootstrap.py  bootstrap_asyncio.py  bootstrap_gevent.py  db.rs  forbidden.gif.datauri  glr.py  main.rs  record.rs  server.rs  store.rs  sysinfo.rs  trace_format.rs
tests/: asyncio_app.py  gevent_app.py  gevent_app_stress.py  test_bootstrap.py  test_glr.py  test_python_sources.py
web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: main.tsx  styles.css  timeline.ts  wire.ts
web/tests/: timeline.test.ts  wire.test.ts
