[package]
name = "greenlane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal", "time"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.7", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
rust-embed = "8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
polars = { version = "0.54.4", default-features = false, features = ["lazy"] }
