[package]
name = "greenlane"
version = "0.1.0"
edition = "2024"
description = "A microscope for gevent and asyncio applications: a live timeline profiler that attaches to a running Python process and visualizes scheduler activity, GC pauses, and call stacks."
authors = ["Serhii Babak"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mermoldy/greenlane"
homepage = "https://github.com/mermoldy/greenlane"
readme = "README.md"
keywords = ["gevent", "asyncio", "profiler", "greenlet", "tracing"]
categories = ["development-tools::profiling", "development-tools::debugging"]
# web/dist/* is git-ignored (built by `bun run build`), so it is excluded from
# the package by default. rust-embed needs those assets at compile time, so list
# them explicitly here — build the viewer (`make web`) before `cargo publish`.
include = [
    "src/**/*",
    "web/dist/**/*",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal", "time"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.7", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
rust-embed = "8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
polars = { version = "0.54.4", default-features = false, features = ["lazy"] }
