[project]
name = "greenlane"
version = "0.1.0"
description = "Live timeline profiler for gevent scheduler activity (dev/test harness for the greenlane CLI)"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = ["gevent==26.5.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "structlog>=26.1.0",
    "ty>=0.0.55",
]

[tool.pytest.ini_options]
# The Python module under test (`glr.py`) lives in `src/`, alongside the Rust
# sources; put it on the path so tests can `import glr`. Scope collection to
# `tests/` so `bench/` and the rest of the tree aren't walked for tests.
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# The benchmark app must run `monkey.patch_all()` before its other imports.
"bench/app.py" = ["E402"]
# The bootstrap is a template: `__TRACE_MODE__`/`__WARN_NS__` are substituted and
# the `GlrEnc` encoder is inlined by the Rust materializer before injection, so it
# reads as undefined names (F821) on the raw template — expected.
"src/bootstrap.py" = ["F821"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
# The bootstraps are injection templates, not standalone modules: `__TRACE_MODE__`
# / `__WARN_NS__` are text-substituted and the `GlrEnc` encoder is inlined by the
# Rust materializer before injection. As raw files they reference undefined names,
# so the type checker can't (and shouldn't) analyze them.
exclude = ["src/bootstrap.py"]
