[project]
name = "greenline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = ["gevent==26.5.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "structlog>=26.1.0",
    "ty>=0.0.55",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*_app.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
