[project]
name = "greenlane"
version = "0.1.0"
description = "Live timeline profiler for gevent and asyncio scheduler activity (dev/test harness for the greenlane CLI)"
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = ["gevent==26.5.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "structlog>=26.1.0",
    "ty>=0.0.55",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*_app.py" = ["E402"]
# The bootstraps are templates: `__TRACE_MODE__`/`__WARN_NS__` are substituted
# and the `GlrEnc` encoder is inlined by the Rust materializer before injection,
# so they read as undefined names (F821) on the raw template — expected.
"src/bootstrap_*.py" = ["F821"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
# The bootstraps are injection templates, not standalone modules: `__TRACE_MODE__`
# / `__WARN_NS__` are text-substituted and the `GlrEnc` encoder is inlined by the
# Rust materializer before injection. As raw files they reference undefined names,
# so the type checker can't (and shouldn't) analyze them.
exclude = ["src/bootstrap_gevent.py", "src/bootstrap_asyncio.py"]
